--- a/tools/debian/control
+++ b/tools/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 10),
  automake,
  cpio,
  pkg-config,
- asl-dahdi-source (>= 1:3.0),
+ dahdi-source,
  libnewt-dev,
  bzip2,
  libusb-1.0-0-dev,
