--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
@@ -22,7 +22,7 @@ jobs:
           image_additional_mb: 4096
           base_image: ${{ matrix.base_image }}
           cpu: ${{ matrix.cpu }}
-          copy_artifact_path: "*.deb;*.build;*.buildinfo*.changes"
+          copy_artifact_path: "*.deb;*.build;*.buildinfo;*.changes"
           commands: |
             apt-get update
             apt-get install -y dahdi-source libnewt-dev libusb-1.0.0-dev \
