--- a/.github/workflows/build-x86.yml
+++ b/.github/workflows/build-x86.yml
@@ -12,8 +12,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - codename: bookworm
           - codename: bullseye
-          - codename: buster
+          #- codename: buster
     steps:
       - uses: actions/checkout@v2
 
