--- a/.github/workflows/build-x86.yml
+++ b/.github/workflows/build-x86.yml
@@ -14,7 +14,7 @@ jobs:
         include:
           - codename: bookworm
           - codename: bullseye
-          #- codename: buster
+          - codename: buster
     steps:
       - uses: actions/checkout@v2
 
