build for bookworm
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -14,12 +14,16 @@ jobs:
         include:
           - arch: armv7l
             cpu: cortex-a7
-            base_image: raspios_lite:latest
+            base_image: raspios_lite:2023-05-03
             codename: bullseye
           - arch: armv7l
             cpu: cortex-a7
             base_image: raspios_lite:2021-05-07
             codename: buster
+          - arch: armv7l
+            cpu: cortex-a7
+            base_image: raspios_lite:latest
+            codename: bookworm
     steps:
       - uses: actions/checkout@v2
 
