--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: pguyot/arm-runner-action@v2
+      - uses: pguyot/arm-runner-action@main
         with:
           image_additional_mb: 4096
           base_image: ${{ matrix.base_image }}
